Ensure overlay covers entire view

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,7 +84,8 @@ p {
 .overlay {
   display: none;
   border: none;
-  position: absolute;
+  position: fixed;
+  top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, .45);
